5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1708_3034.log
== TEST (2019-04-29 15:11:40) 
-- CODE:
6*5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:52) 
-- CODE:
x=(6*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:53) 
-- CODE:
x=(6*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:53) 
-- CODE:
x=(6*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:53) 
-- CODE:
x=(6*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:11:54) 
-- CODE:
x=(6*5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x==ESPADA
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
